--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
 
     function mapMode(value){
       switch(value){
-        case 1: return "Home pos mode";
+        case 1: return "Home position mode";
         case 2: return "All wheel mode";
         case 3: return "Zero turn";
         case 4: return "Crab";
@@ -78,8 +78,8 @@
 
     function mapShearing(value){
       switch(value){
-        case 1: return "Sensing pos";
-        case 0: return "Home pos";
+        case 1: return "Sensing position";
+        case 0: return "Home position";
         default: return "0";
       }
     }
